Closed Bug 977667 Opened 12 years ago Closed 12 years ago

VolatileBufferFallback.cpp:16:10: error: ‘nullptr’ was not declared in this scope

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: mcsmurf, Assigned: mcsmurf)

Details

Attachments

(1 file, 1 obsolete file)

Currently the code under memory/mozalloc/VolatileBufferFallback.cpp fails to compile with gcc 4.5 and 4.4 (afaik those are still supported :): VolatileBufferFallback.cpp:16:10: error: ‘nullptr’ was not declared in this scope Probably just need to add the usual "#include "mozilla/NullPtr.h"".
Attached patch Patch (obsolete) — Splinter Review
Very trivial review I think
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #8383126 - Flags: review?(mh+mozilla)
Attached patch PatchSplinter Review
Attachment #8383126 - Attachment is obsolete: true
Attachment #8383126 - Flags: review?(mh+mozilla)
Attachment #8383127 - Flags: review?(mh+mozilla)
Attachment #8383127 - Flags: review?(mh+mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: