Bug 977667 - VolatileBufferFallback.cpp:16:10: error: â€˜nullptrâ€™ was not declared in this scope, r=glandium