memory/mozalloc/VolatileBufferFallback.cpp
@@ -4,6 +4,7 @@
 
 #include "VolatileBuffer.h"
 #include "mozilla/Assertions.h"
+#include "mozilla/NullPtr.h"
 #include "mozilla/mozalloc.h"
 
 #ifdef MOZ_MEMORY
